--- a/university-project-master/_variables.scss
+++ b/university-project-master/_variables.scss
@@ -4,3 +4,5 @@ $third-color: #f2f2f2;
 $main-font: "Montserrat", sans-serif;
 $layout-breakpoint_medium: 768px;
 $layout-breakpoint-large: 992px;
+$background-gradient: linear-gradient(90deg, #05159E 0%, #84D3FF 50%, #D7FDFF 100%);
+$font-family-first: "Roboto", serif;
