--- a/university-project-master/_header.scss
+++ b/university-project-master/_header.scss
@@ -11,15 +11,20 @@ body {
 
     header {
         @include box ($third-color, 25px, $second-color, center, 100%);
+        background: $background-gradient;
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 20px;
 
         .head {
             h1 {
                 font-family: "Roboto", serif;
                 margin-bottom: 20px;
-                color: black;
-                font-weight: 700;
+                color: rgb(255, 255, 255);
+                text-shadow: 1px 0px 2px black;
+                font-weight: 900;
                 font-style: normal;
-                font-size: 20px;
+                font-size: 30px;
             }
 
         }
@@ -27,12 +32,15 @@ body {
         .search {
             input {
                 padding: 10px;
+                border-radius: 10px 0px 0px 10px;
             }
 
             button {
-                background-color: black;
+                background-color: rgb(62, 151, 233);
                 padding: 10px;
                 color: white;
+                border-radius: 0px 12px 12px 0px;
+                font-family: $font-family-first;
             }
 
             div {
